# Agent-System-OLD

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  WINDOWS.md  dev.bat  docker-compose.test.yml  docker-compose.yml  postman_collection.json  pyproject.toml  requirements-dev.txt  requirements.txt  response.json
.claude/: launch.json
.github/: copilot-instructions.md
.github/agents/: Architecture Engineer.agent.md
docs/: QUICKSTART_PHASE1.md  multi-phase-agent.md  next-phases.md  phase1_completion.md  plan.md  stream-ott-security.md  testing.md  tools-plan.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/apps/demo/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
frontend/apps/demo/src/: App.tsx
frontend/apps/existing-client/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Chat/: ApiKeyInput.tsx  MessageInput.tsx  MessageList.tsx  index.ts
frontend/src/services/: api.ts  sse.ts
infrastructure/certs/: generate-certs.sh
infrastructure/docker/kafka/: create-topics.sh
infrastructure/docker/postgres/: init.sql
infrastructure/docker/redis/: redis.conf
libs/: __init__.py
libs/common/: __init__.py  auth.py  config.py  exceptions.py  logging.py  text.py  tool_catalog.py
libs/db/: __init__.py  models.py  session.py
libs/embeddings/: __init__.py  openai_embedder.py
libs/llm/: __init__.py  anthropic.py  base.py  factory.py  openai.py
libs/messaging/: __init__.py
libs/messaging/kafka/: __init__.py  consumer.py  producer.py
libs/messaging/redis/: __init__.py  client.py  pubsub.py  streams.py
libs/vectordb/: __init__.py  milvus_client.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_tenants_users.py  002_pricing_ledger.py  003_jobs_messages.py  004_partners.py  005_billing_plans.py  006_user_tool_preferences.py  007_file_uploads.py  008_conversations.py  009_file_analysis_description.py  010_knowledge_base.py  011_live_sessions.py  012_file_extracted_text.py  013_message_branching.py
old/checklist_generator/: gpt_checklist_generator.py
old/constants/data/: 2.html  checklist_data.json  prompt_template.txt  system_prompt.txt  system_prompt_2.txt  system_prompt_3.txt
scripts/: create_web_search_job.py  seed_auth_data.py  test_async.py  test_docker_connectivity.py
services/: __init__.py
services/api-gateway/: Dockerfile
services/api-gateway/scripts/: generate_postman.py
services/api-gateway/src/: __init__.py  config.py  main.py  openapi_extensions.py
services/api-gateway/src/jobs/: __init__.py  credit_reset.py  low_balance_alert.py  (+2 more)
services/archiver/: Dockerfile  README.md  __init__.py
services/archiver/src/: __init__.py  config.py  main.py
services/auth-broker/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  run_local.sh
services/live-session-manager/: Dockerfile  requirements.txt
services/live-session-manager/src/: config.py  main.py
services/orchestrator/: Dockerfile
services/orchestrator/src/: __init__.py  config.py  main.py
services/stream-edge/: Dockerfile  __init__.py
services/stream-edge/src/: __init__.py  config.py  main.py
services/tool-workers/: Dockerfile  __init__.py
services/tool-workers/src/: config.py  main.py  registry.py
services/websocket-gateway/: Dockerfile  requirements.txt
services/websocket-gateway/src/: config.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: test_partner_flow.py  test_partner_isolation.py  test_phase1_auth_flow.py  test_phase2_billing_flow.py  test_suspend_resume_flow.py
tests/unit/: test_auth_utils.py  test_billing.py  test_credit_consumption.py  test_effort_levels.py  test_feature_service.py  test_internal_token.py  test_internal_token_v2.py  test_partner_auth.py  test_partner_rate_limiting.py  test_rate_limiting.py  test_subscription_service.py  test_suspend_resume.py  test_wallet_service.py  test_wallet_sync.py
tests/unit/api-gateway/: test_billing.py  test_credit_consumption.py  test_feature_service.py  test_partner_rate_limiting.py  test_rate_limiting.py  test_subscription_service.py  test_wallet_service.py
tests/unit/archiver/: test_archiver_events.py
tests/unit/common/: test_logging.py  test_stream_ott.py
tests/unit/orchestrator/: test_phase_executor.py  test_snapshot_service.py
tests/unit/tool-workers/: test_assets_loader.py  test_web_search.py
(+97 files in other folders)
