[project]
name = "agent-system"
version = "1.0.0"
description = "Event-driven AI agent system with multi-tenant B2B support"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["migrations/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # allow raise without from in except
    "SIM102", # nested if → combined (often less readable)
    "SIM105", # try-except-pass → contextlib.suppress (style preference)
    "SIM108", # if-else → ternary (often less readable)
    "E712",   # SQLAlchemy requires == True/False for boolean column comparisons
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/*" = ["ARG001"]
# structlog processors require (logger, method_name, event_dict) signature
"libs/common/logging.py" = ["ARG001"]
# FastAPI lifespan/exception handlers require specific signatures
"services/*/src/main.py" = ["ARG001"]
# LLM providers use **kwargs for extensibility
"libs/llm/anthropic.py" = ["ARG002"]
"libs/llm/openai.py" = ["ARG002"]
# Kafka handlers require (message, headers) signature per MessageHandler type
"libs/messaging/kafka/consumer.py" = ["ARG002"]
"services/*/src/handlers/*.py" = ["ARG002"]
"services/tool-workers/src/main.py" = ["ARG001"]
# FastAPI route handlers may have unused `request` param needed for Depends()
"services/*/src/routers/*.py" = ["ARG001"]
# Rate limit middleware passes context params for future use
"services/*/src/middleware/*.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["libs", "services"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["libs", "services"]
